--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+
+
+@keyframes mymove {
+  0% {transform: scale(1) rotateX(0deg) rotateY(0deg);}
+  100% {transform: scale(1) rotateX(0deg) rotateY(360deg);}
+}
+*{
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+}
+span{
+  font-size: 0.9em;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +28,84 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.main-container{
+  max-width: auto;
+  max-height: 2000px;
+  
+}
+
+.main-nav{
+  display:  flex;
+  justify-content: center;
+  border-bottom: 3px solid black  ;
+}
+.left-bar{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+
+}
+.right-bar{
+  display: flex;
+  flex-wrap: nowrap;
+
+
+}
+.l-nav-btn{
+
+  font-size: 1.3em; 
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+ 
+}
+.r-nav-btn {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  margin-left: 20px;
+  margin-right: 20px; 
+  border-radius: 20px;
+  
+ 
+ 
+ 
+}
+.homeCenter{
+  margin-bottom: -40px;
+  width: 100%;
+  padding: 80px 60px 0px 60px;
+  text-align: center;
+  font-size: 4em;
+}
+
+
+.btn-cont{
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+
+
+.login-btn{
+  font-size: 1.2em;
+  background-size: 300% 100%;
+  background-image: linear-gradient(to right, rgb(37, 170, 225), rgb(68, 129, 235), rgb(4, 190, 254), rgb(63, 134, 237));
+  box-shadow: rgb(65 132 234 / 75%) 0px 4px 15px 0px;
+  color: white;
+  font-weight: 300;
+  width: 12rem;
+  height: 2.5rem;
+  
+}
+.login-btn:hover{
+  background-color: #b71c1c;
+}
+.logo:hover{
+  animation: mymove 2s;
+}
+
+
